# CTF_challenge

Alpaca11/alpaca-mark-revenge/: package-lock.json  poc.js
Alpaca11/alpaca-mark/bot/: Dockerfile
Alpaca11/jackpot/: test.py
Alpaca11/redirector/: package-lock.json
Alpaca11/redirector/web/: index.html
Alpaca11/tiny-note/web/: app.py
GPN23/free-parking-network-v2/: poc.js
GPN23/real-christmas/: Dockerfile  config.py  main.py  pyproject.toml  run.py  test.html
GPN23/real-christmas/app/: __init__.py  graphql.py  models.py  routes.py  services.py  tasks.py
GPN23/real-christmas/app/templates/: base.html  flag.html  index.html  login.html  register.html
GoogleCTF2025/: test.html
GoogleCTF2025/web-mythos-python/perl/: start.sh
GoogleCTF2025/web-mythos-python/perl/mythos/lib/: Mythos.pm
GoogleCTF2025/web-mythos-python/py/webserver/: app.py  util.py
GoogleCTF2025/web-sourceless/src/: fuzz.js
